finished overall trips page and tweaked main css

--- a/trips-overall.html
+++ b/trips-overall.html
@@ -19,5 +19,262 @@
 			</div>
 		</div>
 	</div>
+<!-- OVERVIEW OF TRIPS WITH TESTIMONIALS AND QUOTES -->
+	<div class="trip-overview">
+		<div class="white-bg">
+			<div class="container">
+				<div class="flex">
+					<div class="flex-1-of-2">
+						<img class="trip-image-1" src="images/nyc3.jpg">
+					</div>
+					<div class="flex-1-of-2 trip-quote-1">
+						<h3>"Please extend my sincerest thanks to everyone who helped organize the trip. I literally completely owe you guys for getting me my dream job."</h3>
+						<p>- Peter Simonsen, HackCville Alumnus, Data Analyst at Dataminr in NYC</p>
+					</div>
+				</div>
+				<div class="flex info-2">
+					<div class="flex-1-of-2 trip-quote-2">
+						<h3>"Please extend my sincerest thanks to everyone who helped organize the trip. I literally completely owe you guys for getting me my dream job."</h3>
+						<p>- Peter Simonsen, HackCville Alumnus, Data Analyst at Dataminr in NYC</p>
+					</div>
+					<div class="flex-1-of-2">
+						<img class="trip-image-2" src="images/nyc4.jpg">
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+<!-- OUR NEXT TRIP -->
+	<div class="next-trip">
+		<div class="hc-blue-bg">
+			<div class="container">
+				<h1>Our Next Trip:</h1>
+				<div class="container section-border next-trip-city">
+					<h1>Charlottesville, VA</h1>
+					<div class="flex">
+						<div class="flex-1-of-2 date">
+							<h3>Friday, September 22, 2017</h3>
+							<div class="button">
+								<h4>Get the Details &rarr; </h4>
+							</div>
+						</div>
+						<div class="flex-1-of-2 app-date">
+							<h3>Applications Live August 22nd</h3>
+							<div class="button">
+								<h4>See all upcoming trips &rarr; </h4>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+<!-- TRIP SPONSORS -->
+	<div class="trip-sponsors">
+		<div class="white-bg">
+			<div class="container">
+				<h1>Trip Sponsors</h1>
+				<h3><i>Presenting Sponsors</i></h3>
+				<div class="flex">
+					<div class="flex-1-of-4">
+						<img class="img-1-sponsor" src="images/ilab.jpg">
+					</div>
+					<div class="flex-1-of-4">
+						<img class="img-2-sponsor" src="images/galant.png">
+					</div>
+					<div class="flex-1-of-4">
+						<img class="img-3-sponsor" src="images/busbot.png">
+					</div>
+					<div class="flex-1-of-4">
+						<img class="img-4-sponsor" src="images/archemedx.png">
+					</div>
+				</div>
+				<h3 class="supporting-sponsors"><i>Supporting Sponsors</i></h3>
+				<div class="flex">
+					<div class="flex-1-of-4">
+						<img class="img-1-sponsor" src="images/ilab.jpg">
+					</div>
+					<div class="flex-1-of-4">
+						<img class="img-2-sponsor" src="images/galant.png">
+					</div>
+					<div class="flex-1-of-4">
+						<img class="img-3-sponsor" src="images/busbot.png">
+					</div>
+					<div class="flex-1-of-4">
+						<img class="img-4-sponsor" src="images/archemedx.png">
+					</div>
+					<div class="flex-1-of-4">
+						<img class="img-1-sponsor" src="images/ilab.jpg">
+					</div>
+					<div class="flex-1-of-4">
+						<img class="img-2-sponsor" src="images/galant.png">
+					</div>
+					<div class="flex-1-of-4">
+						<img class="img-3-sponsor" src="images/busbot.png">
+					</div>
+					<div class="flex-1-of-4">
+						<img class="img-4-sponsor" src="images/archemedx.png">
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+<!-- TESTIMONIALS -->
+	<div class="testimonial">
+		<div class="hc-blue-bg">
+			<div class="container">
+				<div class="flex">
+					<figure class="image-pullquote right flex-1-of-3">
+						<img src="images/tarek.jpg" class="profile">
+						<figcaption>
+							<p><span class="bold">Tarek Pertew</span></p>
+							<p>Co-founder of Uncubed</p>
+						</figcaption>
+					</figure>
+					<p class="flex-2-of-3" id="quote">"We hired two HackCville student interns for the last two summers for both technical and non-technical (editorial) roles. We were blown away by the quality of their work and how quickly thye began contributing to the team.<br><br>They added tremendous bandwidth to what we could accomplish as a small startup and were able to keep them on for part-time stints while back at school. We even tried to convince one of them to leave school and work with us full-time."</p>
+				</div>
+			</div>
+		</div>
+	</div>
+<!-- HOW TRIPS WORK -->
+	<div class="how-trips-work">
+		<div class="white-bg">
+			<div class="container">
+				<h1>How Trips Work</h1>
+				<div class="flex">
+					<div class="flex-1-of-2 steps">
+						<h2><i>1. Apply</i></h2>
+						<p>Anyone 18+ can apply to our trips through our quick online application. (We give extra consideration to existing HackCville members, but not guaranteed admission.) You can see our upcoming trips below - applications typically open about 30-45 days before the trip. <br><br>You don't need to be looking for an internship or job to apply - these trips are a great opportunity to just get inspired and learn about the opportunities available to you.</p>
+					</div>
+					<div class="flex-1-of-2">
+						<img src="images/nyc5.jpg">
+					</div>
+					<div class="flex-1-of-2">
+						<img src="images/nyc6.jpg">
+					</div>
+					<div class="flex-1-of-2 step-2">
+						<h2><i>2. Career Prep</i></h2>
+						<p>Accepted students will get access to exclusive workshops where we'll help you tweak your resume, LinkedIn, and share tips and tricks for effective networking. Students will submit their final resumes in advance of the trip to be sent to our hiring company partners.</p>
+					</div>
+					<div class="flex-1-of-2 step-2">
+						<h2><i>3. Company Visits</i></h2>
+						<p>On a typical trip, we'll visit 5-6 for about an hour each. We usually speak to fairly high-level employees - founders, CTOs, marketing directors, ect - about their experiences. HackCville and/or UVA alumni employees at these companies are frequent hosts of these visits.</p>
+					</div>
+					<div class="flex-1-of-2">
+						<img src="images/nyc5.jpg">
+					</div>
+					<div class="flex-1-of-2">
+						<img src="images/nyc6.jpg">
+					</div>
+					<div class="flex-1-of-2 step-2">
+						<h2><i>4. Alumni Mixer</i></h2>
+						<p>We end each day of visits with an opportunity to network with dozens of local alumni in whatever city we're visiting. You'll get to talk to them about how they got to where they are today. Many are hiring, too! Most students walk away with new friends and new contacts that can help them with their personal projects, academic journey, and job prospects.</p>
+					</div>
+				</div>
+				<h3 class="watch-video"><i>Watch an overview of our annual trip to New York City</i></h3>
+				<iframe width="700" height="393.75" src="https://www.youtube.com/embed/Y2o9TFbLvu4" frameborder="0" allowfullscreen></iframe>
+			</div>
+		</div>
+	</div>
+<!-- TRIP FEES -->
+	<div class="trip-fees">
+		<div class="blue-bg">
+			<div class="container">
+				<h1>Trip Fees</h1>
+				<p>Our startup trips have been proven to be transformative experiences that dramatically expand the opportunities and networks of attendees. Because of this, our goal is to make these trips as accessible as possible. <br><br>Our supportive sponsors above enable us to subsidize the cost of all our trips, sometimes by as much as 50%. Partial and full scholarships are available to students with financial need. Applications are reviewed need-blind.</p>
+			</div>
+		</div>
+	</div>
+<!-- FOR COMPANIES AND ALUMNI -->
+	<div class="companies-and-alumni">
+		<div class="white-bg">
+			<div class="container">
+				<h1>How Companies and Alumni<br>Can Get Involved</h1>
+				<p>We're always looking for exciting companies to introduce to our talented students.</p>
+				<div class="button">
+					Host a Visit &rarr;
+				</div>
+				<div class="button">
+					Sponsor a Trip &rarr;
+				</div>
+			</div>
+		</div>
+	</div>
+<!-- UPCOMING TRIPS -->
+	<div class="upcoming-trips">
+		<div class="blue-bg">
+			<div class="container">
+				<h1>Upcoming Trips</h1>
+				<div class="flex">
+					<div class="flex-1-of-2 trip-one">
+						<div class="trip-text">
+							<h3><i>New York City Startup Trip</i></h3>
+							<p><i>November 15-16, 2017<br>Applications Open October 1</i></p>
+							<div class="button">Get the Details &rarr;</div>
+						</div>
+					</div>
+					<div class="flex-1-of-2 trip-two">
+						<div class="trip-text">
+							<h3><i>San Francisco Startup Trip</i></h3>
+							<p><i>November 15-16, 2017<br>Applications Open October 1</i></p>
+							<div class="button">Get the Details &rarr;</div>
+						</div>
+					</div>
+					<div class="flex-1-of-2 trip-three">
+						<div class="trip-text">
+							<h3><i>Charlottesville Startup Trip</i></h3>
+							<p><i>November 15-16, 2017<br>Applications Open October 1</i></p>
+							<div class="button">Get the Details &rarr;</div>
+						</div>
+					</div>
+					<div class="flex-1-of-2 trip-four">
+						<div class="trip-text">
+							<h3><i>Washington, DC Startup Trip</i></h3>
+							<p><i>November 15-16, 2017<br>Applications Open October 1</i></p>
+							<div class="button">Get the Details &rarr;</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+<!-- INSERT FOOTER HERE -->
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
